# interview_helper

./: .gitignore  README.MD  assistant.py  assistant_response_service.py  assistant_service.py  assistant_v1.py  fastapi_response.py  fastapi_service.py  file_observer.py  index.html  logger.py  main.py  pipline.py  pyproject.toml  read_transcribe.py  recorder.py  recorder_service.py  settings.py  transcriber.py  transcriber_async.py  transcriber_service.py  ws_manager.py
transcriptions/: output_1.txt  output_2.txt
