[tool.poetry]
name = "interview-helper"
version = "0.1.0"
description = "pipline with neuronetworks for interwiew helping"
authors = ["anovikov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyAudio = "^0.2.14"
openai = "^1.48.0"
Wave = "^0.0.2"
whisper = "^1.1.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
