[tool.poetry]
name = "interview-helper"
version = "0.1.0"
description = "pipline with neuronetworks for interwiew helping"
authors = ["anovikov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyAudio = "^0.2.14"
Wave = "^0.0.2"
vosk = "^0.3.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
